project/css/style.css
/* --- Global Reset ---*/
@import "normalize.css";

/* Colors
#472839 main purple
#bfc94c secondary color
#7d324e secondary purple
#e6b1c4 pink */

/*--------------------General Styles---------------- */
body{
	font-family: "myriad pro", arial, sans-serif;
	background: url(../images/bg_floral.jpg);
	max-width: 960px;
	}
	
header{
	background-color: #472839;
	height: 123px;
	}

nav{
	margin: 0;
	padding: 0;
	width: 100%;
	}
nav ul li{
	display: inline-block;
	background-color: #7d324e;
	line-height: 49px;
	border-right: solid 1px #fff;
	text-align: center;
	width: 16.123456789%;
	word-spacing:0;
	letter-spacing:0;
	}
nav ul li:last-child{
	border: none;
	}
nav ul{
	margin: 0;
	padding: 0;
	background-color: #7d324e;
	width: 100%;
	letter-spacing:-0.31em;
	word-spacing:-0.43em;
	}
nav a{
	display: block;
	width: 100%;
	height: 49px;
	text-decoration: none;
	color: #bfc94c;
/* 	padding: 0 80px 0 0; */
	}
nav .current{
	background-color: #bfc94c;
	color: #472839;
	}   

#blessedthoughts{
/* 	margin: 0 auto; */
	padding: 10px 0px;
/* 	height: 190px; */
	}
#blessedthoughts a{
	background: url(../images/logo.png) no-repeat;
	display: block;
	width: 100%;
	height: 100px;
	text-indent: -20000px;
/* 	margin-top: 30px; */
	}
#login{
	float: right;
	margin: -90px 10px 0 0;
	color: #bfc94c;
	}
h1{
	margin: 0
	}	
h2,h1{
	color: #472839;
	}
h3{
	background-color: #e6b1c4;
	color: #472839;
	margin: 0;
	}
	
article, section{
/* 	clear: both; */
	width: 69.79166667%;
	float: left;
	}
section a{
	float: right;
	color: #e6b1c4;
	}
	
aside{
/* 	clear: both; */
	float: left;
	background-color: #472839;
	width: 162px;
	text-align: center;
	color: #bfc94c;
	margin-top: 50px;
	margin-bottom: 50px;
	}
aside a{
	color: #bfc94c;
	text-decoration: none;
	}
	
footer{
	clear: both;
	margin-top: 20px;
	text-align: center;
	background-color: #472839;
	height: 100px;
	color: #bfc94c;
	font-size:20px;
	width: 960px;
	}
footer ul li{
	display: inline-block;
	}
footer a{
	text-decoration: none;
	color: #bfc94c;
	font-size: 16px;
	}
/*-------------------Home--------------------------------*/
#home{
	margin-left: 60px;
	margin-bottom: 30px;
	}
/* ------------------About Us-----------------------	 */
#content{
	margin: -770px 70px 0 200px;
	}
/*------------------- Contact Us---------------------	 */
#contact{
	float: left;
	margin: -420px 0 60px 60px;
	width: 69.79166667%
	}
	
aside#hours{
	float: right;
	background-color: transparent;
	margin: 260px -50px 0 0;
	}
#name_contact, #email_contact{
	width: 290px;
	margin-bottom: 8px;
	}
/*--------------------Details-----------------------------*/
#detail{
	text-align: center;
	}	
/* -----------------Images----------------------	 */
img{
	margin: 50px 0 0 310px;
	max-width: 100%;
	}
img#feature{
	margin: 50px 0 0;
	max-width: 100%
	}
	
.cards{
	border: solid 3px #000;
	margin: 0 20px 40px 30px;
	max-width: 100%;
	}
	
#bird{
	border: solid 4px #e6b1c4;
	float: right;
	margin: 8px -90px 0 0;
	max-width: 100%;
	}
#contact_bird{
	float: right;
	margin: 50px 0 0 -250px;
	border: solid 4px #e6b1c4;
	max-width: 100%;
	}
	
#card{
	background: transparent;
	float: right;
	margin: 50px 0 0;
	font-family: "Lucida Calligraphy", script, serif;
	color: #472839;
	width: 281px;
	}
#card p{
	width: 100%;
	}

#order_card{
	margin: 50px 0 0 0;
	}
	
#gallery{
	max-width: 100%;
	margin-left: 80px; 
	}
#gallery a{
/* 	margin: 0 0 40px 0; */
	max-width: 100%;
	}
#feature_rose{
	max-width: 100%;
	margin-left: 30px;
	}
#fb{
	float: right;
	margin: -50px 190px 0 0;
	height: 32px;
	}
#twitter{
	float: right;
	margin: -50px 140px 0 0;
	height: 32px;
	}
#ig{
	float: right;
	margin: -50px 90px 0 0;
	}
#social{
	margin-right: 130px;
	}

/*----------------------Order----------------------------------------------- */
#responsive{
/* 	visibility: hidden; */
	display: none;
	}
form fieldset{
	border: none;
	}	
.form_input label {
	float: left;
	width: 20%;
	margin: 4px 0 5px 0;
	color: #472839;
	text-align: right;
	padding-right: 10px;
	}
.form_input input{
	float: left;
	padding: 5px;
	color: #472839;
	}
 
form fieldset.radio ul li label {
	display: inline;
	float: none;
	width: auto;
	font-weight: normal;
	}
form fieldset.radio ul {
	margin: 5px 0 0 20%;
	}
form fieldset.radio ul li {
	margin: 0 0 5px 0;
	list-style-type: none;
	}
form fieldset.radio ul li:last-child {
	margin: 0;
	}
.radio{
	width: 557px;
	color: #472839;
	}

.form-text{
	width: 290px;
	}
#order{
	margin-left: 80px;
	margin-top: 30px;
	width: 400px;
	}
#order_card{
	margin-left: 230px;
	}
#insert_card{
	margin-left: 0;
	}
	
.form_input{
	clear: both;
	margin-bottom: 10px;
	overflow: hidden;
	width: 577px;
	}
	


/*----------------------Controls--------------------------------------------	 */
label.contact_us{
	display: block;
/* 	text-align: right; */
/* 	float: left; */
	width: 250px;
	color: #472839;
	margin-bottom: 6px;
	}
	
#name, #email, #number, #questions{
	width: 290px;
	margin-bottom: 8px;
	}
	

input#button{
	font-family: "myriad pro", Arial, sans-serif;
	font-size: 16px;
	color: #bfc94c;
	padding: 10px 20px;
	background: -moz-linear-gradient(
		top,
		#7d324e 0%,
		#3d232d);
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(#7d324e),
		to(#3d232d));
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
	border-radius: 0px;
	border: 1px solid #361521;
	-moz-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 1px rgba(255,255,255,0.5);
	-webkit-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 1px rgba(255,255,255,0.5);
	box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 1px rgba(255,255,255,0.5);
	text-shadow:
		0px -1px 0px rgba(000,000,000,0.7),
		0px 1px 0px rgba(255,255,255,0.3);
	width: 160px;
	margin: 10px 8px 0 0;
}
/* ... */

